--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
+    "core-js": "^3.33.3",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.5",
     "vue": "^3.4.21",
