feat: Main Layout: Navbar-Sidebar feat: Window Layout: Sublayout con componente de ventana feat: Window Standard: Sublayout con contenedor completo
feat: Vista y funcionamiento de listado de productos

add: Estilos al archivo de configuración de tailwind

feat: Modal de eliminación de entidades (reutilizable)
refactor: Uso de composable en en módulo de productos (useVentanas)
refactor: Uso de composable en la vista de listado de productos

refactor: Componentización de los formularios (datos e imagenes) y tabla de la vista de formulario de productos

temporal: archivos de gestión del módulo de claves unidades y claves productos SAT

add: Uso de variables de entorno por medio de vite

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_PATH_API = http://lachosoft.cloud:4000/api/
-VUE_APP_PATH_API_PRODUCTS = http://lachosoft.cloud:7000/api/
+VITE_API_URL = http://lachosoft.cloud:4000/api/
+VITE_API_PRODUCTS_URL = http://lachosoft.cloud:7000/api/
 PORT = 9990
 KEY = FJ0EpQWFuQstCGk1zcZB3gyjmn/7L6fMhwus9wAiWjU
